--- a/greetings.html
+++ b/greetings.html
@@ -1,2 +1,17 @@
-ar name = prompt("What's your name?");
+<!DOCTYPE html>
+<html>
+<head>
+     <title></title>
+</head>
+<body>
+
+<script type="text/javascript">
+
+var name = prompt("What's your name?");
 console.log("hello" name);
+
+
+</script>
+
+</body>
+</html>   
