--- a/madlibs.html
+++ b/madlibs.html
@@ -1,8 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+     <title></title>
+</head>
+<body>
+
+<script type="text/javascript">
+
 var adjective = "funny";
 var noun = "hippo";
 var verb = "playing";
 
-Sometimes I rhyme adjective sometimes I rhyme quick
-I was on 1-2-5 and noun
-Waiting on a cab, verb in the rain
-Under my heart three clouds of pain
+"Sometimes I rhyme" adjective "sometimes I rhyme quick"
+"I was on 1-2-5 and" noun
+"Waiting on a cab," verb "in the rain"
+"Under my heart three clouds of pain"
+
+</script>
+
+</body>
+</html>   
