--- a/shout.html
+++ b/shout.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
 <html>
-prompt ("Give me a word, and I'll shout it out");
-> yeah
-yeah!!!
-</html>
+<head>
+     <title></title>
+</head>
+<body>
+
+<script type="text/javascript"> 
+var x = prompt ("Give me a word, and I'll shout it out");
+consloe.log(x);
+
+
+</script>
+
+</body>
+</html>   
