--- a/temperature.html
+++ b/temperature.html
@@ -1,3 +1,19 @@
-(prompt) Please enter a temperature in celsius
->C
-C degrees celsius is  = (C x 2) + 30 degrees fahrenheit
+<!DOCTYPE html>
+<html>
+<head>
+     <title></title>
+</head>
+<body>
+
+<script type="text/javascript">
+
+var C = prompt("Please enter a temperature in celsius");
+
+consloe.log(C "degrees celsius is"  =(C x 2) + 30 "degrees fahrenheit");
+
+
+
+</script>
+
+</body>
+</html>   
