--- a/greetings.html
+++ b/greetings.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 
 var name = prompt("What's your name?");
-console.log("hello" name);
+console.log("hello " + name);
 
 
 </script>
