--- a/madlibs.html
+++ b/madlibs.html
@@ -11,9 +11,9 @@ var adjective = "funny";
 var noun = "hippo";
 var verb = "playing";
 
-"Sometimes I rhyme" adjective "sometimes I rhyme quick"
-"I was on 1-2-5 and" noun
-"Waiting on a cab," verb "in the rain"
+"Sometimes I rhyme " + adjective + "sometimes I rhyme quick"
+"I was on 1-2-5 and " + noun
+"Waiting on a cab, " + verb + "in the rain"
 "Under my heart three clouds of pain"
 
 </script>
