--- a/temperature.html
+++ b/temperature.html
@@ -9,7 +9,7 @@
 
 var C = prompt("Please enter a temperature in celsius");
 
-consloe.log(C "degrees celsius is"  =(C x 2) + 30 "degrees fahrenheit");
+consloe.log(C + "degrees celsius is " + ((C x 2)+30) + "degrees fahrenheit");
 
 
 
