--- a/shout.html
+++ b/shout.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript"> 
 var x = prompt ("Give me a word, and I'll shout it out");
-consloe.log(x);
+console.log(x);
 
 
 </script>
